--- a/module/Application/view/application/estaciones/estaciones.phtml
+++ b/module/Application/view/application/estaciones/estaciones.phtml
@@ -1,25 +1,28 @@
-
-<div class="col-lg-12" style="margin-bottom:20px">
-    <button type="button" class="btn btn-primary" onclick="modalCrearEstacion()">Crear estación</button>    
-</div>
-<div class="col-sm-6" id="divTablaEstaciones">
-       
-</div>
-<div class="modal fade" id="modalCrearEstacion" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-      </div>
-      <div class="modal-body" id="crearEstacionBody">
-        
-      </div>
-      <div class="modal-footer" id="crearEstacionFooter">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary" onclick="guardarEstacion()">Guardar cambios</button>
-      </div>
+<div class="contenedor">
+  <div class="row">
+    <div class="col-lg-12" style="margin-bottom:20px">
+        <button type="button" class="btn btn-primary" onclick="modalCrearEstacion()">Crear estación</button>    
     </div>
+    <div class="col-sm-6" id="divTablaEstaciones">
+           
+    </div>
+    <div class="modal fade" id="modalCrearEstacion" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+          </div>
+          <div class="modal-body" id="crearEstacionBody">
+            
+          </div>
+          <div class="modal-footer" id="crearEstacionFooter">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-primary" onclick="guardarEstacion()">Guardar cambios</button>
+          </div>
+        </div>
+      </div>
+    </div>  
   </div>
 </div>
 <script>
