--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -1,6 +1,7 @@
 <?php echo $this->doctype(); ?>
 <?php 
 if (defined('RUNNING_FROM_ROOT')) {
+  $basePath = $this->basePath();
   $this->plugin('basePath')->setBasePath($this->basePath().'/public');
 } ?>
 <html lang="es">
@@ -15,6 +16,8 @@ if (defined('RUNNING_FROM_ROOT')) {
 
         <!-- Le styles -->
         <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
+                        ->prependStylesheet($this->basePath() . '/css/font-awesome.min.css')
+                        ->prependStylesheet($this->basePath() . '/css/bootstrap-footer.css')
                         ->prependStylesheet($this->basePath() . '/css/style.css')
                         ->prependStylesheet($this->basePath() . '/css/bootstrap-theme.min.css')
                         ->prependStylesheet($this->basePath() . '/css/bootstrap.min.css') ?>
@@ -37,17 +40,21 @@ if (defined('RUNNING_FROM_ROOT')) {
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="<?php echo $this->url('home') ?>">Autolock</a>
+                    <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img width="75px" src="<?php echo $this->basePath() ?>/img/autolock.png"> AutoLock </a>
                 </div>
                 <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
+                    <ul class="nav navbar-nav" style="margin-left:45px">
                         <?php if (!$this->identity()) { ?>
-                            <li><a href="<?php echo $this->basePath() ?>/user/login">Iniciar Sesión</a></li>
-                            <li><a href="<?php echo $this->basePath() ?>/user/register">Registrarse</a></li>
+                            <li><a href="<?php echo $basePath ?>/user/login">Iniciar Sesión</a></li>
+                            <li><a href="<?php echo $basePath ?>/user/register">Registrarse</a></li>
                         <?php } else { ?>
-                            <li><a href="?php echo $this->basePath() ?>/user/logout">Cerrar Sesión</a></li>
+                            <li><a href="<?php echo $basePath ?>/estaciones"><span class="glyphicon glyphicon-hdd"></span> Mis Estaciones</a></li>
+                            <li><a href="<?php echo $basePath ?>/empleados"><span class="glyphicon glyphicon-user"></span> Mis Empleados</a></li>
+                            <li><a href="<?php echo $basePath ?>/estadisticas"><span class="glyphicon glyphicon-stats"></span> Estadísticas</a></li>
                             <?php } ?>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="<?php echo $this->basePath() ?>/user/logout"><span class="glyphicon glyphicon-lock"></span> Cerrar Sesión</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -55,11 +62,10 @@ if (defined('RUNNING_FROM_ROOT')) {
         <div class="container">
             <?php echo $this->content; ?>
         </div>
-        <div class="container">
-            <hr>
-            <footer>
-                <p>&copy; 2005 - <?php echo date('Y') ?> by Zend Technologies Ltd. <?php echo $this->translate('All rights reserved.') ?></p>
-            </footer>
+        <div class="footer">
+            <div class="container">
+                <p class="text-muted">&copy; 2005 - <?php echo date('Y') ?> AutoLock. <?php echo $this->translate('All rights reserved.') ?></p>
+            </div>
         </div>
          <!-- /container -->
         <?php echo $this->inlineScript() ?>
