--- a/module/Application/view/application/estaciones/estaciones.phtml
+++ b/module/Application/view/application/estaciones/estaciones.phtml
@@ -6,6 +6,20 @@
     <div class="col-sm-6" id="divTablaEstaciones">
            
     </div>
+    <div class="col-sm-6">
+      <label>Nombre de la estación:</label>
+      <p class="form-control-static" id="pNombreEstacion"></p>
+      <label>Latitud central:</label>
+      <p class="form-control-static" id="pLat1"></p>
+      <label>Longitud central:</label>
+      <p class="form-control-static" id="pLon1"></p>
+      <label>Latitud perimétrica:</label>
+      <p class="form-control-static" id="pLat2"></p>
+      <label>Longitud perimétrica:</label>
+      <p class="form-control-static" id="pLon2"></p>
+      <label>Empleados con acceso a la estación:</label>
+      <p class="form-control-static" id="pEmpleados"></p>
+    </div>
     <div class="modal fade" id="modalCrearEstacion" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
