--- a/module/Application/view/application/empleados/empleados.phtml
+++ b/module/Application/view/application/empleados/empleados.phtml
@@ -1,22 +1,34 @@
-<div class="col-lg-12" style="margin-bottom:20px">
-    <button type="button" class="btn btn-primary" onclick="modalCrearEmpleado()">Agregar empleado</button>    
-</div>
-<div class="col-sm-6" id="divTablaEmpleados">
-       
-</div>
-<div class="modal fade" id="modalCrearEmpleado" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">Empleados</h4>
-      </div>
-      <div class="modal-body" id="crearEmpleadoBody">
-        
-      </div>
-      <div class="modal-footer" id="crearEmpleadoFooter">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary" onclick="guardarEmpleado()">Guardar cambios</button>
+<div class="contenedor">
+  <div class="row">
+    <div class="col-lg-12" style="margin-bottom:20px">
+        <button type="button" class="btn btn-primary" onclick="modalCrearEmpleado()">Agregar empleado</button>    
+    </div>
+    <div class="col-sm-6" id="divTablaEmpleados">
+           
+    </div>
+    <div class="col-sm-6">
+      <label>Nombre:</label>
+      <p class="form-control-static" id="pNombreEmpleado"></p>
+      <label>Número de empleado:</label>
+      <p class="form-control-static" id="pNumero"></p>
+      <label>Días laborales:</label>
+      <p class="form-control-static" id="pLaborales"></p>
+    </div>
+    <div class="modal fade" id="modalCrearEmpleado" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <h4 class="modal-title" id="myModalLabel">Empleados</h4>
+          </div>
+          <div class="modal-body" id="crearEmpleadoBody">
+            
+          </div>
+          <div class="modal-footer" id="crearEmpleadoFooter">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-primary" onclick="guardarEmpleado()">Guardar cambios</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
