--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@ body {
     padding-top: 60px;
     padding-bottom: 40px;
     background-color: #f7f7f7;
+    background-image: url("img/fondo.jpeg");
 }
 
 .zf-green {
